--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
 	"name": "reducto",
+	"productName": "Reducto",
 	"version": "1.0.0",
+	"main": "./build/main.js",
 	"scripts": {
 		"build": "tsc",
 		"watch": "tsc -w",
 		"dev": "nodemon --exec electron ./build/main.js",
-		"start": "electron ./build/main.js"
+		"start": "electron .",
+		"package-win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=false --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Reducto\"",
+		"package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
 	},
 	"license": "MIT",
 	"devDependencies": {
 		"@types/imagemin": "^7.0.0",
 		"@types/imagemin-mozjpeg": "^8.0.0",
 		"electron": "^9.0.2",
+		"electron-packager": "^14.2.1",
 		"nodemon": "^2.0.4",
 		"typescript": "^3.9.3"
 	},
